# electronics-store

./: items.csv  pyproject.toml
main/: main.py
tests/: test_utils.py
utils/: utils.py  utils_Phone.py
